--- a/src/Calculator.module.css
+++ b/src/Calculator.module.css
@@ -1,12 +1,18 @@
 
 
 .container {
+    border: 3px solid white;
+    border-radius: 8%;
+    padding: 10% 10% 10% 10%;
+    width: 300px;
+    height: 500px;
+  }
+
+  .inputfield {
     border: 1px solid white;
-    border-radius: 15%;
-    padding: 5%;
-    width: 30%;
-    height: 60%;
-    margin: 0 auto;
+    padding: 10px 5px 10px 5px;
+    text-align: right;
+    font-size: 40px;
   }
 
    .buttoncontainer {
@@ -14,16 +20,16 @@
     flex-direction: row;
     flex-wrap: wrap;
   }
+
    .button {
     border: 1px solid;
     border-radius: 15%;
-    padding: 25px;
+    padding: 20px;
     margin: 10px;
   }
-  
 
-   .inputfield {
-    border: 1px solid white;
-    padding: 10px;
-    text-align: right;
+  .button:hover {
+    background-color: white;
+    color: black;
   }
+
